add version endpoint
