# static/swagger.json
@@ -22,6 +22,23 @@
     }
   ],
   "paths": {
+    "/version": {
+      "get": {
+        "description": "returns the version",
+        "tags": [
+          "Category 1"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Success"
+          },
+          "400": {
+            "description": "Failure"
+          }
+        }
+      }
+    },
     "/sobol": {
       "get": {
         "description": "returns a Sobol sequence",
@@ -53,7 +70,7 @@
           "400": {
             "description": "Failure"
           }
-        } 
+        }
       }
     },
     "/integerise": {
@@ -70,7 +87,9 @@
               "schema": {
                 "$ref": "#/components/schemas/float_array",
                 "type": "array",
-                "items": { "type": "number" }
+                "items": {
+                  "type": "number"
+                }
               }
             }
           }
@@ -91,7 +110,7 @@
         }
       }
     }
-  },    
+  },
   "components": {
     "schemas": {
       "positive_integer": {
@@ -101,7 +120,9 @@
       "float_array": {
         "description": "array of floating-point numbers, NB '3.' won't parse, use '3' or '3.0'",
         "type": "array",
-        "items": { "type": "number" }
+        "items": {
+          "type": "number"
+        }
       }
     }
   }
